# bd-notebooks-module

./: .gitignore  00-spark-init.py  README.md  conda-readme.md  docker-compose.yml  docker-minio.yml  docker-mysqlserver.yml  environment.yml  ipython_kernel_config.py  liquid-clustering.ipynb  pyproject.toml  requirements.txt  setup-and-cluster-submit.sh
.devcontainer/: devcontainer.json  docker-compose.extend.yml
notebooks/: hello-notebook.ipynb  markdown-notebook.ipynb  profile.ipynb  python-notebook.ipynb  taxi-data-analysis.ipynb
notebooks/Interviews/: Interview_Q01.ipynb
notebooks/crewai/: L001-crewai_setup.ipynb  L002-crewai_trip_planner.ipynb  L003-agentic-workflow.ipynb  L004-rag-clients-search.ipynb  L005-ProjectDesigner.ipynb  L006-ImageList.ipynb  L007-Research_Write_Article.ipynb  L008-customer_support.ipynb  L009-tools_customer_outreach.ipynb  L010-tasks_event_planning.ipynb  L014-crewai-knowledge-source.ipynb  L015-crewai-memory.ipynb  L015-langchain_crewai_tools.ipynb
notebooks/deltalake/: 00-deltalake-catalogs.ipynb  00-deltalake-spark-sql.ipynb  00-deltalake-spark.ipynb  00-spark-deltalake.ipynb  01-deltalake-time travel.ipynb  02-deltalake-schema-validation.ipynb  03-deltalake-schema-evolution.ipynb  04-parquet-to-delta.ipynb  05-deletion-vectors.ipynb  06-shallow-and-deep-clones.ipynb  07-optimize-vacuum.ipynb  08-zorder.ipynb  09-liquid-clustering.ipynb  liquid-clustering.ipynb  spark-deltalake.ipynb
notebooks/interviews/: Interview_Q001.ipynb  Interview_Q002.ipynb  Interview_Q003.ipynb  Interview_Q004.ipynb  Interview_Q005.ipynb  Interview_Q006.ipynb  Interview_Q007.ipynb  Interview_Q008.ipynb  Interview_Q009.ipynb  Interview_Q010.ipynb  Interview_Q011.ipynb
notebooks/iterviews/: Interview_Q002.ipynb
notebooks/minio/: MinIOTest.ipynb
notebooks/mysql/: hello-mysql.ipynb  order_price_analysis.ipynb  setup-mysql.ipynb
notebooks/openai/: 000-langchain.ipynb  000-openai.ipynb  000-pdf_loader.ipynb  001-hello-openai.ipynb  001-langchain.ipynb  002-agenticrag.ipynb  002-langchain-openai.ipynb  002-langchain-rag.ipynb  003-langgraph-conssite-audit .ipynb  003-langgraph-groq.ipynb  003-langgraph-hf.ipynb  003-langgraph-openai.ipynb  003-langgraph-recruitment-workflow.ipynb  004-langgraph-azure-ai.ipynb  mysqltest.ipynb  playground.ipynb
notebooks/spark-joins/: spark-joins-stratgies.ipynb  spark-joins.ipynb
notebooks/spark-readers/: spark-csv.ipynb  spark-parquet.ipynb  spark-table.ipynb
notebooks/spark-sql/: spark-hints.ipynb  spark-joins-stratgies.ipynb  spark-null-handeling.ipynb  (+4 more)
(+61 files in other folders)
