# 1. Define the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 2. Define project metadata
[project]
name = "bd-notebooks-module"
version = "1.0.0"
description = "bd-notebooks-module"
keywords = ["spark", "deltalake", "openai", "mysql"]
authors = [{ name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }]
maintainers = [
  { name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0"
dependencies = [
    "mcp",
    "python-dotenv",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/main/py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/test/py"
]