# 1. Define the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 2. Define project metadata
[project]
name = "bd-notebooks-module"
version = "1.0.0"
description = "bd-notebooks-module"
keywords = ["spark", "deltalake", "openai", "mysql"]
authors = [{ name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }]
maintainers = [
  { name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0"
dependencies = [
    "confluent-kafka[avro]>=2.14.0",
    "delta-spark==3.3.2",
    "duckdb-engine>=0.17.0",
    "flask>=3.1.3",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
    "grpcio>=1.80.0",
    "ipykernel>=7.2.0",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.8",
    "jupysql>=0.11.1",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.2",
    "pymysql>=1.1.3",
    "pyspark==3.5.3",
    "python-dotenv",
    "setuptools>=82.0.1",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/main/py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/test/py"
]
